// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reports cancelReportRequests returns count and detailed info of cancelled requests if succesful 1`] = `
Array [
  Object {
    "Count": 1,
    "ReportRequestInfo": Object {
      "CompletedDate": undefined,
      "EndDate": 2009-02-13T02:10:39.000Z,
      "GeneratedReportId": undefined,
      "ReportProcessingStatus": "_CANCELLED_",
      "ReportRequestId": "2291326454",
      "ReportType": "_GET_MERCHANT_LISTINGS_DATA_",
      "Scheduled": false,
      "StartDate": 2009-01-21T02:10:39.000Z,
      "StartedProcessingDate": undefined,
      "SubmittedDate": 2009-02-20T02:10:39.000Z,
    },
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`reports getReport returns a report if succesful 1`] = `
Array [
  "  order-id order-item-id purchase-date payments-date buyer-email 
  buyer-name buyer-phone-number sku product-name quantity-purchased 
  currency item-price item-tax shipping-price shipping-tax 
  ship-service-level recipient-name ship-address-1 ship-address-2 
  ship-address-3 ship-city ship-state ship-postal-code ship-country
  ship-phone-number delivery-start-date delivery-end-date 
  delivery-time-zone delivery-Instructions
103-26010-55904 394929210114 2011-02-09T02:46:57-08:00
2011-02-09T02:46:57-08:00 0g9lx423zn5@marketplace.amazon.com 
Joe Customer 404-555-1212 JW-RT1-HLD9 The Structure of Aikido: 
Volume 1: Kenjutsu and Taijutsu Sword and Open-Hand Movement 
Relationships (Structure of Aikido, Vol 1) 1 USD 19.49 0.00 3.99 
0.00 Standard Joe Customer 123 Main Street LAWRENCE CA 90044-2463 
US 404-555-1212",
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`reports getReportCount returns report count if succesful 1`] = `
Array [
  Object {
    "Count": 166,
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`reports getReportList returns report info and next token if succesful 1`] = `
Array [
  Object {
    "HasNext": true,
    "NextToken": NextToken {
      "action": "GetReportList",
      "token": "2YgYW55IPQhvu5hbCBwbGVhc3VyZS4=",
    },
    "ReportInfo": Object {
      "Acknowledged": false,
      "AcknowledgedDate": undefined,
      "AvailableDate": 2009-02-10T09:22:33.000Z,
      "ReportId": "898899473",
      "ReportRequestId": "2278662938",
      "ReportType": "_GET_MERCHANT_LISTINGS_DATA_",
    },
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`reports getReportListByNextToken returns report info and next token if succesful 1`] = `
Array [
  Object {
    "HasNext": false,
    "NextToken": NextToken {
      "action": "GetReportList",
      "token": "none",
    },
    "ReportInfo": Object {
      "Acknowledged": false,
      "AcknowledgedDate": undefined,
      "AvailableDate": 2009-02-10T09:22:33.000Z,
      "ReportId": "898899473",
      "ReportRequestId": "2278662938",
      "ReportType": "_GET_MERCHANT_LISTINGS_DATA_",
    },
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`reports getReportRequestCount returns report request count if succesful 1`] = `
Array [
  Object {
    "Count": 1276,
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`reports getReportRequestList returns report request info succesfully for responses with a single report 1`] = `
Array [
  Object {
    "HasNext": true,
    "NextToken": NextToken {
      "action": "GetReportRequestList",
      "token": "2YgYW55IPQhcm5hbCBwbGVhc3VyZS4=",
    },
    "ReportRequestInfo": Object {
      "CompletedDate": 2011-02-17T23:44:48.000Z,
      "EndDate": 2011-02-13T02:10:39.000Z,
      "GeneratedReportId": "3538561173",
      "ReportProcessingStatus": "_DONE_",
      "ReportRequestId": "2291326454",
      "ReportType": "_GET_MERCHANT_LISTINGS_DATA_",
      "Scheduled": false,
      "StartDate": 2011-01-21T02:10:39.000Z,
      "StartedProcessingDate": 2011-02-17T23:44:43.000Z,
      "SubmittedDate": 2011-02-17T23:44:09.000Z,
    },
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`reports getReportRequestList returns report request info succesfully for responses with multiple reports 1`] = `
Array [
  Object {
    "HasNext": true,
    "NextToken": NextToken {
      "action": "GetReportRequestList",
      "token": "2YgYW55IPQhcm5hbCBwbGVhc3VyZS4=",
    },
    "ReportRequestInfo": Array [
      Object {
        "CompletedDate": 2011-02-17T23:44:48.000Z,
        "EndDate": 2011-02-13T02:10:39.000Z,
        "GeneratedReportId": "3538561173",
        "ReportProcessingStatus": "_DONE_",
        "ReportRequestId": "2291326454",
        "ReportType": "_GET_MERCHANT_LISTINGS_DATA_",
        "Scheduled": false,
        "StartDate": 2011-01-21T02:10:39.000Z,
        "StartedProcessingDate": 2011-02-17T23:44:43.000Z,
        "SubmittedDate": 2011-02-17T23:44:09.000Z,
      },
      Object {
        "CompletedDate": 2011-02-17T23:44:48.000Z,
        "EndDate": 2011-02-13T02:10:39.000Z,
        "GeneratedReportId": "3538561173",
        "ReportProcessingStatus": "_DONE_",
        "ReportRequestId": "2291326454",
        "ReportType": "_GET_MERCHANT_LISTINGS_DATA_",
        "Scheduled": false,
        "StartDate": 2011-01-21T02:10:39.000Z,
        "StartedProcessingDate": 2011-02-17T23:44:43.000Z,
        "SubmittedDate": 2011-02-17T23:44:09.000Z,
      },
      Object {
        "CompletedDate": 2011-02-17T23:44:48.000Z,
        "EndDate": 2011-02-13T02:10:39.000Z,
        "GeneratedReportId": "3538561173",
        "ReportProcessingStatus": "_DONE_",
        "ReportRequestId": "2291326454",
        "ReportType": "_GET_MERCHANT_LISTINGS_DATA_",
        "Scheduled": false,
        "StartDate": 2011-01-21T02:10:39.000Z,
        "StartedProcessingDate": 2011-02-17T23:44:43.000Z,
        "SubmittedDate": 2011-02-17T23:44:09.000Z,
      },
      Object {
        "CompletedDate": 2011-02-17T23:44:48.000Z,
        "EndDate": 2011-02-13T02:10:39.000Z,
        "GeneratedReportId": "3538561173",
        "ReportProcessingStatus": "_DONE_",
        "ReportRequestId": "2291326454",
        "ReportType": "_GET_MERCHANT_LISTINGS_DATA_",
        "Scheduled": false,
        "StartDate": 2011-01-21T02:10:39.000Z,
        "StartedProcessingDate": 2011-02-17T23:44:43.000Z,
        "SubmittedDate": 2011-02-17T23:44:09.000Z,
      },
      Object {
        "CompletedDate": 2011-02-17T23:44:48.000Z,
        "EndDate": 2011-02-13T02:10:39.000Z,
        "GeneratedReportId": "3538561173",
        "ReportProcessingStatus": "_DONE_",
        "ReportRequestId": "2291326454",
        "ReportType": "_GET_MERCHANT_LISTINGS_DATA_",
        "Scheduled": false,
        "StartDate": 2011-01-21T02:10:39.000Z,
        "StartedProcessingDate": 2011-02-17T23:44:43.000Z,
        "SubmittedDate": 2011-02-17T23:44:09.000Z,
      },
      Object {
        "CompletedDate": 2011-02-17T23:44:48.000Z,
        "EndDate": 2011-02-13T02:10:39.000Z,
        "GeneratedReportId": "3538561173",
        "ReportProcessingStatus": "_DONE_",
        "ReportRequestId": "2291326454",
        "ReportType": "_GET_MERCHANT_LISTINGS_DATA_",
        "Scheduled": false,
        "StartDate": 2011-01-21T02:10:39.000Z,
        "StartedProcessingDate": 2011-02-17T23:44:43.000Z,
        "SubmittedDate": 2011-02-17T23:44:09.000Z,
      },
    ],
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`reports getReportRequestListByNextToken returns report request info if succesful 1`] = `
Array [
  Object {
    "HasNext": false,
    "NextToken": NextToken {
      "action": "GetReportRequestList",
      "token": "none",
    },
    "ReportRequestInfo": Object {
      "CompletedDate": undefined,
      "EndDate": 2009-02-13T02:10:39.000Z,
      "GeneratedReportId": undefined,
      "ReportProcessingStatus": "_SUBMITTED_",
      "ReportRequestId": "2291326454",
      "ReportType": "_GET_MERCHANT_LISTINGS_DATA_",
      "Scheduled": false,
      "StartDate": 2009-01-21T02:10:39.000Z,
      "StartedProcessingDate": undefined,
      "SubmittedDate": 2009-02-20T02:10:39.000Z,
    },
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`reports requestReport returns a parsed model when the response is valid 1`] = `
Array [
  Object {
    "CompletedDate": undefined,
    "EndDate": 2009-02-13T02:10:39.000Z,
    "GeneratedReportId": undefined,
    "ReportProcessingStatus": "_SUBMITTED_",
    "ReportRequestId": "2291326454",
    "ReportType": "_GET_MERCHANT_LISTINGS_DATA_",
    "Scheduled": false,
    "StartDate": 2009-01-21T02:10:39.000Z,
    "StartedProcessingDate": undefined,
    "SubmittedDate": 2009-02-20T02:10:39.000Z,
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;
